responsive design added

--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -25,3 +25,9 @@
     width: 55px;
     padding: 15px 5px;
 }
+@media (max-width: 580px) {
+   .card{
+       margin: 0 auto;
+       margin-top: 5px;
+   }
+}
