--- a/src/components/analysis/analysis.css
+++ b/src/components/analysis/analysis.css
@@ -11,3 +11,13 @@
     width: 100%;
     margin: 0 10px;
 }
+@media (max-width: 1100px) {
+    .analysis__col{
+        margin: 0 2px;
+    }
+}
+@media (max-width: 970px) {
+    .analysis__row{
+        flex-direction: column;
+    }
+}
