--- a/src/components/pie-chart/pie-chart.css
+++ b/src/components/pie-chart/pie-chart.css
@@ -18,3 +18,15 @@
     width: 100%;
     height: 350px;
 }
+@media (max-width: 560px) {
+    .pie-chart{
+        padding: 0;
+    }
+    .pie-chart__title{
+        font-size: 18px;
+    }
+    .pie-chart__chart {
+        font-size: 12px;
+        padding: 1px;
+    }
+}
