--- a/src/components/wallet-table/table.css
+++ b/src/components/wallet-table/table.css
@@ -81,10 +81,7 @@
     }
 }
 @media (max-width: 1030px) {
-    .wallet__wrapper {
-        flex-direction: column;
-        align-items: center;
-    }
+    
     .wallet-table__headers-row th input {
         width: 150px;
     }
@@ -93,4 +90,46 @@
         width: 100%;
         margin-bottom: 15px;
     }
+}
+@media (max-width: 580px) {
+    .wallet-table {
+        font-size: 14px;
+    }
+    .wallet-table__title {
+        font-size: 18px;
+    }
+    .wallet-table__headers-row th button {
+        width: 38px;
+        height: 22px;
+        line-height: 1;
+    }
+    .wallet-table__headers-row th input::placeholder {
+        color: #979797;
+        font-size: 14px;
+    }
+    .wallet-table__headers-row th,
+    .wallet-table__row td {
+        padding: 8px 4px;
+    }
+    .wallet-table__headers-row th input {
+        width: 130px;
+    }
+}
+@media (max-width: 460px) {
+    .wallet-table__headers-row th input[type=date] {
+        width: 100px;
+    }       
+}
+@media (max-width: 430px) {
+    .wallet-table__headers-row th input[type=date] {
+        width: 70px;
+    }       
+}
+@media (max-width: 400px) {
+    .wallet-table__headers-row th input[type=date] {
+        width: 50px;
+    }
+    .wallet-table__headers-row th input[type=text] {
+        width: 80px;
+    }         
 }
