--- a/src/components/line-chart/line-chart.css
+++ b/src/components/line-chart/line-chart.css
@@ -17,6 +17,13 @@
     width: 100%;
     height: 350px;
 }
+.placeholder {
+    text-align: center;
+    font-size: 18px;
+    font-weight: 700;
+    color: #979797;
+    margin-bottom: 10px;
+}
 @media (max-width: 580px) {
     .line-chart{
         max-width: 500px;
